@@ -108,6 +108,14 @@
             android:onCheckedChanged="@{() -> sheet.checkLimitReached()}" />
 
           <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/consume"
+            style="@style/Widget.Grocy.CheckBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/title_consume"
+            android:onCheckedChanged="@{() -> sheet.checkLimitReached()}" />
+
+          <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/purchase"
             style="@style/Widget.Grocy.CheckBox"
             android:layout_width="match_parent"
@@ -116,11 +124,19 @@
             android:onCheckedChanged="@{() -> sheet.checkLimitReached()}" />
 
           <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/consume"
+            android:id="@+id/transfer"
             style="@style/Widget.Grocy.CheckBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/title_consume"
+            android:text="@string/title_transfer"
+            android:onCheckedChanged="@{() -> sheet.checkLimitReached()}" />
+
+          <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/inventory"
+            style="@style/Widget.Grocy.CheckBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/title_inventory"
             android:onCheckedChanged="@{() -> sheet.checkLimitReached()}" />
 
         </LinearLayout>
